fix horizontal spacing issues

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -51,7 +51,7 @@
     }
 
     .leftPane {
-        flex: 1 1;
+        flex: 2 2;
         display: flex;
         justify-content: flex-end;
         align-items: center;
@@ -59,15 +59,16 @@
     }
     
     .rightPane {
-        flex: 1.5 1.5;
+        flex: 3 3;
         display: flex;
         justify-content: flex-start;
         align-items: center;
+        margin-right: 20px;
     }
 }
 
 /* mobile mode */
-@media only screen and (max-width: 1150px) {
+@media only screen and (max-width: 1149px) {
     .section {
         display: flex;
         flex-flow: column;
