--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -61,7 +61,8 @@
   font-weight: normal;
   font-size: 24px;
   line-height: 30px;
-  margin: 0
+  margin: 0;
+  padding-bottom: 20px;
 }
 
 .grid {
@@ -178,7 +179,7 @@
 }
 
 /* mobile mode */
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 899px) {
   .socialMedia {
     transform: scale(0);
   }
