--- a/styles/Interests.module.css
+++ b/styles/Interests.module.css
@@ -45,7 +45,7 @@
 }
 
 /* adjustable width */
-@media only screen and (min-width: 1150px) and (max-width: 1450px) {
+@media only screen and (min-width: 1170px) and (max-width: 1449px) {
     .section {
         display: flex;
         flex-flow: column;
@@ -86,7 +86,7 @@
 }
 
 /* mobile and tablet mode */
-@media only screen and (max-width: 1150px) {
+@media only screen and (max-width: 1169px) {
     .section {
         display: flex;
         flex-flow: column;
