--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@ a {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  padding: 0px 30px 0px 20px;
+  padding: 0px 35px 0px 20px;
 }
 
 /* large screen */
@@ -46,10 +46,14 @@ a {
     background-attachment: fixed;
     background-size: cover;
   }
+
+  .ant-timeline-item-left > .ant-timeline-item-content {
+    width: calc(50% - 22px) !important;
+  }
 }
 
 /* tablet mode */
-@media only screen and (min-device-width: 800px) and (max-device-width: 1024px) {
+@media only screen and (min-device-width: 800px) and (max-device-width: 1023px) {
   body:before {
     content: "";
     display: block;
@@ -69,10 +73,14 @@ a {
     -moz-background-size: cover;
     -o-background-size: cover;
   }
+
+  .ant-timeline-item-left > .ant-timeline-item-content {
+    width: calc(50% - 22px) !important;
+  }
 }
 
 /* mobile mode */
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 799px) {
   body:before {
     content: "";
     display: block;
@@ -91,5 +99,9 @@ a {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+  }
+
+  .ant-timeline-item-left > .ant-timeline-item-content {
+    width: calc(100% - 26px) !important;
   }
 }
