--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -4,7 +4,7 @@
     left: 0;
     height: 100px;
     width: 100%;
-    z-index: 9997;
+    z-index: 900;
     padding: 15px;
 }
 
@@ -12,9 +12,10 @@
     display: flex;
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
     padding-left: 60px;
-    padding-right: 60px;
+    padding-right: 50px;
     justify-content: space-between;
     padding-top: 30px;
 }
@@ -41,4 +42,8 @@
     font-size: 20px;
     line-height: 29px;
     padding-left: 40px;
+}
+
+.anchorLinks > a:hover {
+    color: #1890ff;
 }
